--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "url": "git+https://github.com/joe7lopes/camisola-backend.git"
   },
   "scripts": {
-    "start": "node app",
-    "dev": "NODE_ENV=development nodemon ./app",
+    "start": "tsc && node ./build",
+    "dev": "NODE_ENV=development nodemon --config \"./nodemon.json\" ./app",
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
@@ -18,7 +18,13 @@
     "mongoose": "^5.8.11"
   },
   "devDependencies": {
+    "@types/node": "^13.7.1",
+    "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.7.1",
     "jest": "^25.1.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.6.2",
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5"
   }
 }
