--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "mongoose": "^5.8.11"
   },
   "devDependencies": {
-    "@types/node": "^13.7.1",
     "@types/express": "^4.17.2",
+    "@types/jest": "^25.1.2",
     "@types/mongoose": "^5.7.1",
+    "@types/node": "^13.7.1",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.2",
