--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "tsc && node ./build",
     "dev": "NODE_ENV=development nodemon --config \"./nodemon.json\" ./app",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest --runInBand"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -18,12 +18,18 @@
     "mongoose": "^5.8.11"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.2",
     "@types/mongoose": "^5.7.1",
     "@types/node": "^13.7.1",
+    "@types/supertest": "^2.0.8",
+    "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
+    "supertest": "^4.0.2",
+    "ts-jest": "^25.2.0",
     "ts-node": "^8.6.2",
     "tslint": "^6.0.0",
     "typescript": "^3.7.5"
