--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,14 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "esModuleInterop": true,
         "target": "es6",
-        "noImplicitAny": true,
         "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
         "sourceMap": true,
-        "strict": true,
+        "esModuleInterop": true,
         "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
         "outDir": "build",
-        "baseUrl": ".",
-        "paths": {
-            "*": [
-                "node_modules/*",
-                "app/types/*"
-            ]
-        }
     }
 
 }
