--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "camisola-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/joe7lopes/camisola-backend.git"
   },
+  "engines": {
+    "node": ">= 8.3"
+  },
   "scripts": {
-    "start": "tsc && node ./build",
-    "dev": "NODE_ENV=development nodemon --config \"./nodemon.json\" ./app",
-    "test": "NODE_ENV=test jest --runInBand"
+    "start": "node ./app",
+    "dev": "NODE_ENV=development nodemon ./app",
+    "test": "mocha './app/test/**/*.js'"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -18,20 +21,11 @@
     "mongoose": "^5.8.11"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-typescript": "^7.8.3",
-    "@types/express": "^4.17.2",
-    "@types/jest": "^25.1.2",
-    "@types/mongoose": "^5.7.1",
-    "@types/node": "^13.7.1",
-    "@types/supertest": "^2.0.8",
-    "babel-jest": "^25.1.0",
-    "jest": "^25.1.0",
+    "chai": "^4.2.0",
+    "mocha": "^7.0.1",
+    "mongodb-memory-server": "^6.2.4",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2",
-    "ts-jest": "^25.2.0",
-    "ts-node": "^8.6.2",
-    "tslint": "^6.0.0",
     "typescript": "^3.7.5"
   }
 }
